--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub pages.</p>
+<h1>Tableau Test</h1>
 
 <script type='text/javascript' src='https://online.tableausoftware.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1024px; height: 661px;'><object class='tableauViz' width='1024' height='661' style='display:none;'><param name='host_url' value='https%3A%2F%2Fonline.tableausoftware.com%2F' /> <param name='site_root' value='&#47;t&#47;rightsegmentinc' /><param name='name' value='Sales&#47;GrowthofWalmart' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /></object></div>
 
